--- a/.github/workflows/Daily_download.yml
+++ b/.github/workflows/Daily_download.yml
@@ -17,8 +17,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install dependencies
-        run: |
-          pip install requests
+        run: pip install requests
 
       - name: Download and analyze files
         run: python script.py
